--- a/PocketTools/FlashViewController.xib
+++ b/PocketTools/FlashViewController.xib
@@ -17,9 +17,10 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="L54-ze-4Z3">
-                    <rect key="frame" x="85" y="170" width="150" height="150"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
-                    <state key="normal" backgroundImage="btn_flashlite_on">
+                    <rect key="frame" x="85" y="209" width="150" height="150"/>
+                    <autoresizingMask key="autoresizingMask"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <state key="normal" image="btn_flashlite_on">
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
                     <connections>
@@ -27,7 +28,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.023277521574425537" green="0.047916371357956185" blue="0.24545686141304346" alpha="1" colorSpace="calibratedRGB"/>
             <point key="canvasLocation" x="260" y="335"/>
         </view>
     </objects>
