--- a/PocketTools/DreamSearchViewController.xib
+++ b/PocketTools/DreamSearchViewController.xib
@@ -26,7 +26,7 @@
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="0.12941176469999999" green="0.19215686269999999" blue="0.2274509804" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="280" y="278"/>
         </view>
     </objects>
